test: validate bats files with shellcheck

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ env:
   BUILDX_NO_DEFAULT_LOAD: 1
   CONTAINERBASE_VERSION: ${{ github.sha }}
   APT_HTTP_PROXY: http://172.17.0.1:8000
+  HUSKY: 0
 
 permissions:
   contents: read
@@ -64,8 +65,12 @@ jobs:
           fail_on_error: true
           reporter: github-check
           filter_mode: nofilter
-          path: src
-          pattern: '*.sh'
+          path: |
+            src
+            .husky
+          pattern: |
+            *.sh
+            *.bats
           check_all_files_with_shebangs: 'true'
 
   bats:
