--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,6 +15,22 @@
           {
             "path": "bin/containerbase.tar.xz.sha512",
             "label": "containerbase.tar.xz.sha512"
+          },
+          {
+            "path": "dist/cli/containerbase-cli-amd64",
+            "label": "containerbase-cli-amd64"
+          },
+          {
+            "path": "dist/cli/containerbase-cli-amd64.sha512",
+            "label": "containerbase-cli-amd64.sha512"
+          },
+          {
+            "path": "dist/cli/containerbase-cli-arm64",
+            "label": "containerbase-cli-arm64"
+          },
+          {
+            "path": "dist/cli/containerbase-cli-arm64.sha512",
+            "label": "containerbase-cli-arm64.sha512"
           }
         ]
       }
