--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -6,7 +6,10 @@ FROM ubuntu:jammy as base
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
 
-COPY src/ /
+ARG TARGETARCH
+
+COPY dist/docker/ /
+COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
 
 RUN install-containerbase
 
