--- a/test/nix/Dockerfile
+++ b/test/nix/Dockerfile
@@ -12,7 +12,10 @@ ARG GITHUB_TOKEN
 ENV BASH_ENV=/usr/local/etc/env
 SHELL ["/bin/bash" , "-c"]
 
-COPY src/ /
+ARG TARGETARCH
+
+COPY dist/docker/ /
+COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
 
 RUN install-containerbase
 
