--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,8 @@ jobs:
     permissions:
       contents: read
       checks: write
+    outputs:
+      uid: ${{ steps.init.outputs.uid }}
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
@@ -35,6 +37,11 @@ jobs:
         uses: ./.github/actions/setup-node
         with:
           save-cache: true
+
+      - name: init
+        id: init
+        run: |
+          echo "uid=$(uuidgen)" >> "$GITHUB_OUTPUT"
 
   lint:
     runs-on: ubuntu-latest
@@ -122,6 +129,11 @@ jobs:
     timeout-minutes: 15
 
     steps:
+      - name: docker-config
+        uses: containerbase/internal-tools@6bbc5c952921fd03b8bb242934e57dc8d3d2be1b # v3.0.51
+        with:
+          command: docker-config
+
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           show-progress: false
@@ -141,6 +153,12 @@ jobs:
 
       - name: test distro
         run: docker buildx bake
+
+      - name: build ttl.sh
+        run: docker buildx bake push-ttl
+        env:
+          OWNER: ttl.sh/${{ env.OWNER }}
+          FILE: ${{ needs.setup.outputs.uid }}
 
   distro:
     runs-on: ubuntu-latest
@@ -183,6 +201,7 @@ jobs:
   lang:
     runs-on: ubuntu-latest
     needs:
+      - setup
       - base
       - bats
       - lint
@@ -241,3 +260,4 @@ jobs:
         run: docker buildx bake test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BASE_IMAGE: ttl.sh/${{ env.OWNER }}/${{ needs.setup.outputs.uid }}
