--- a/test/python/Dockerfile.arm64
+++ b/test/python/Dockerfile.arm64
@@ -1,23 +1,15 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+ARG BASE_IMAGE=containerbase/base
+
+FROM ${BASE_IMAGE} as base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
-
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
-
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
 
 #--------------------------------------
 # Image: python
