--- a/test/dart/Dockerfile.arm64
+++ b/test/dart/Dockerfile.arm64
@@ -1,23 +1,18 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+ARG BASE_IMAGE=containerbase/base
 
-RUN uname -p | tee | grep aarch64
+FROM ${BASE_IMAGE} as base
+
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
+ARG GITHUB_TOKEN
 
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
+RUN uname -p | tee | grep aarch64
 
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
 
 #--------------------------------------
 # Image: test
