--- a/test/latest/Dockerfile
+++ b/test/latest/Dockerfile
@@ -1,22 +1,15 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+ARG BASE_IMAGE=containerbase/base
+
+FROM ${BASE_IMAGE} as base
 
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
-
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
-
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
+ARG GITHUB_TOKEN
 
 #--------------------------------------
 # build
@@ -152,10 +145,6 @@ RUN mkdir $HOME/.tf-cache && TF_PLUGIN_CACHE_DIR=$HOME/.tf-cache terraform init
 FROM build as testc
 
 RUN prepare-tool docker
-
-# TODO: move to prepare of git-lfs
-# renovate: datasource=github-tags packageName=git/git
-RUN install-tool git v2.43.0
 
 USER 1000
 
