--- a/test/ruby/Dockerfile.arm64
+++ b/test/ruby/Dockerfile.arm64
@@ -1,23 +1,17 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+ARG BASE_IMAGE=containerbase/base
 
-RUN uname -p | tee | grep aarch64
+FROM ${BASE_IMAGE} as base
+
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
+ARG GITHUB_TOKEN
 
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
-
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
+RUN uname -p | tee | grep aarch64
 
 #--------------------------------------
 # Image: ruby
@@ -39,10 +33,6 @@ RUN install-tool bundler 2.5.5
 # Image: cocoapods
 #--------------------------------------
 FROM test-ruby as test-cocoapods
-
-# cocoapods need git, but don't install yet
-# renovate: datasource=github-tags packageName=git/git
-RUN install-tool git v2.43.0
 
 # renovate: datasource=rubygems versioning=ruby
 RUN install-tool cocoapods 1.15.0
