--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -56,6 +56,9 @@ RUN install-tool flux v2.2.2
 # renovate: datasource=github-releases packageName=git-lfs/git-lfs
 RUN install-tool git-lfs v3.4.1
 
+# renovate: datasource=github-releases packageName=gleam-lang/gleam
+RUN install-tool gleam 0.34.1
+
 # renovate: datasource=docker versioning=docker
 RUN install-tool golang 1.21.6
 
