--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@sindresorhus/is": "6.1.0",
     "clipanion": "3.2.1",
+    "common-tags": "1.8.2",
     "deepmerge": "4.3.1",
     "del": "7.1.0",
     "execa": "8.0.1",
@@ -59,6 +60,7 @@
     "@semantic-release/exec": "6.0.3",
     "@tsconfig/node20": "20.1.2",
     "@tsconfig/strictest": "2.0.2",
+    "@types/common-tags": "1.8.4",
     "@types/global-agent": "2.1.3",
     "@types/node": "20.11.16",
     "@types/semver": "7.5.6",
