--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
       "clipanion@3.2.1": "patches/clipanion@3.2.1.patch",
       "@yao-pkg/pkg@5.11.2": "patches/@yao-pkg__pkg@5.11.1.patch"
     },
+    "allowNonAppliedPatches": true,
     "supportedArchitectures": {
       "os": [
         "linux",
