--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -14,7 +14,7 @@ permissions:
   contents: read
 
 env:
-  DRY_RUN: ${{ github.ref_name != 'main' }}
+  DRY_RUN: ${{ github.ref_name != github.event.repository.default_branch }}
   OWNER: ${{ github.repository_owner }}
   FILE: base
   BUILDKIT_PROGRESS: plain
@@ -64,7 +64,7 @@ jobs:
         uses: ./.github/actions/setup-node
 
       - name: Docker registry login
-        if: github.ref_name == 'main'
+        if: github.ref_name == github.event.repository.default_branch
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
