--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -1,9 +1,5 @@
 name: devcontainer
 on:
-  push:
-    branches:
-      - '**'
-      - '!main'
   pull_request:
     branches:
       - main
@@ -19,7 +15,7 @@ permissions:
 jobs:
   devcontainer-test:
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || (github.repository_owner != github.event.pull_request.head.repo.owner.login && github.event.pull_request.draft != true)
+    if: github.event.pull_request.draft != true
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
