--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -92,6 +92,9 @@ RUN install-tool jb v0.5.1
 # renovate: datasource=github-releases packageName=vmware-tanzu/carvel-vendir
 RUN install-tool vendir v0.40.0
 
+# renovate: datasource=github-releases packageName=UpliftGames/wally
+RUN install-tool wally v0.3.2
+
 #--------------------------------------
 # Image: test-erlang
 #--------------------------------------
