chore(renovate): automerge nix and git-lfs minor

--- a/renovate.json
+++ b/renovate.json
@@ -58,10 +58,12 @@
         "docker",
         "dotnet",
         "git",
+        "git-lfs",
         "gradle",
         "kustomize",
         "helm",
         "helmfile",
+        "nix"
         "node",
         "npm",
         "pdm",
@@ -85,10 +87,12 @@
         "docker",
         "dotnet",
         "git",
+        "git-lfs",
         "gradle",
         "kustomize",
         "helm",
         "helmfile",
+        "nix",
         "node",
         "npm",
         "pdm",
