chore(renovate): fix config

--- a/renovate.json
+++ b/renovate.json
@@ -63,7 +63,7 @@
         "kustomize",
         "helm",
         "helmfile",
-        "nix"
+        "nix",
         "node",
         "npm",
         "pdm",
