chore(renovate): automerge hashin minor (#2321)

--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,7 @@
         "git-lfs",
         "gradle",
         "kustomize",
+        "hashin",
         "helm",
         "helmfile",
         "nix",
@@ -90,6 +91,7 @@
         "git-lfs",
         "gradle",
         "kustomize",
+        "hashin",
         "helm",
         "helmfile",
         "nix",
