build: prepare maint release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -106,5 +106,11 @@
     ]
   },
   "tagFormat": "${version}",
-  "branches": ["main"]
+  "branches": [
+    {
+      "name": "maint/+([0-9])?(.{+([0-9]),x}).x",
+      "range": "${name.replace(/^maint\\//g, '')}"
+    },
+    "main"
+  ]
 }
