--- a/test/python/Dockerfile
+++ b/test/python/Dockerfile
@@ -212,6 +212,10 @@ RUN set -ex \
 # renovate: datasource=pypi
 RUN install-tool checkov 3.2.39
 
+# test old checkov with old python
+RUN install-tool python 3.7.17
+RUN install-tool checkov 2.3.298
+
 #--------------------------------------
 # test pipenv-b: pipenv (multiple python)
 #--------------------------------------
