fix(python/checkov): ensure a working openai version for python 3.7
- https://github.com/openai/openai-python/issues/1263

--- a/test/python/Dockerfile
+++ b/test/python/Dockerfile
@@ -192,6 +192,10 @@ RUN set -ex \
 # renovate: datasource=pypi
 RUN install-tool checkov 3.2.20
 
+# test old checkov with old python
+RUN install-tool python 3.7.17
+RUN install-tool checkov 2.3.298
+
 #--------------------------------------
 # test pipenv-b: pipenv (multiple python)
 #--------------------------------------
