--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -125,7 +125,7 @@ RUN install-tool pnpm 8.15.6
 RUN install-tool yarn 1.22.22
 
 #--------------------------------------
-# Image: test-python
+# Image: test-php
 #--------------------------------------
 FROM build as test-php
 
@@ -149,6 +149,8 @@ RUN install-tool hashin 1.0.1
 RUN install-tool poetry 1.8.2
 # renovate: datasource=pypi
 RUN install-tool pdm 2.13.3
+# renovate: datasource=pypi
+RUN install-tool conan 2.2.2
 
 #--------------------------------------
 # Image: test-ruby
