--- a/test/python/Dockerfile.arm64
+++ b/test/python/Dockerfile.arm64
@@ -60,6 +60,14 @@ FROM test-python as test-poetry
 RUN install-tool poetry 1.8.2
 
 #--------------------------------------
+# Image: conan
+#--------------------------------------
+FROM test-python as test-conan
+
+# renovate: datasource=pypi
+RUN install-tool conan 2.2.2
+
+#--------------------------------------
 # Image: final
 #--------------------------------------
 FROM base
@@ -68,3 +76,4 @@ COPY --from=test-checkov /.dummy /.dummy
 COPY --from=test-hashin /.dummy /.dummy
 COPY --from=test-pipenv /.dummy /.dummy
 COPY --from=test-poetry /.dummy /.dummy
+COPY --from=test-conan /.dummy /.dummy
