--- a/test/Dockerfile.noble
+++ b/test/Dockerfile.noble
@@ -148,7 +148,9 @@ RUN install-tool hashin 1.0.1
 # renovate: datasource=pypi
 RUN install-tool poetry 1.8.2
 # renovate: datasource=pypi
-RUN install-tool pdm 2.13.3
+RUN install-tool pdm 2.15.1
+# renovate: datasource=pypi
+RUN install-tool conan 2.2.3
 
 #--------------------------------------
 # Image: test-ruby
