feat(conan): Add conan support (#2452)
* feat(conan) Add conan support

* Move conan related tools installation to prepare_tool function

* Setting conan profile in prepare_tool step

* Add support for Ubuntu Noble and other improvements after review

* Update test/Dockerfile.noble

* In conan profile use standard library with new ABI (for C++11 and later)

---------

Co-authored-by: Tobiasz Lewandowski <T.Lewandowski@falconvsystems.com>
Co-authored-by: Michael Kriese <michael.kriese@visualon.de>

--- a/renovate.json
+++ b/renovate.json
@@ -55,6 +55,7 @@
         "bazelisk",
         "bun",
         "bundler",
+        "conan",
         "corepack",
         "docker",
         "dotnet",
@@ -88,6 +89,7 @@
         "bun",
         "bundler",
         "corepack",
+        "conan",
         "docker",
         "dotnet",
         "git",
