--- a/test/Dockerfile.noble
+++ b/test/Dockerfile.noble
@@ -142,6 +142,8 @@ FROM build as test-python
 # renovate: datasource=github-releases packageName=containerbase/python-prebuild
 RUN install-tool python 3.12.3
 # renovate: datasource=pypi
+RUN install-tool conan 2.2.3
+# renovate: datasource=pypi
 RUN install-tool hashin 1.0.1
 # renovate: datasource=pypi
 RUN install-tool pipenv 2023.12.1
