--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -152,7 +152,9 @@ RUN install-tool pipenv 2023.12.1
 RUN install-tool pdm 2.15.3
 # renovate: datasource=pypi
 RUN install-tool poetry 1.8.3
-
+RUN prepare-tool rye
+# renovate: datasource=github-releases packageName=astral-sh/rye versioning=rye
+RUN install-tool rye 0.34.0
 #--------------------------------------
 # Image: test-ruby
 #--------------------------------------
