--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,7 @@
         "dotnet",
         "git",
         "git-lfs",
+        "gleam",
         "gradle",
         "kustomize",
         "hashin",
@@ -95,6 +96,7 @@
         "dotnet",
         "git",
         "git-lfs",
+        "gleam",
         "gradle",
         "kustomize",
         "hashin",
