--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,8 +7,8 @@ on:
   merge_group:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
-  cancel-in-progress: ${{ github.ref_name != 'main' }}
+  group: ${{ github.workflow }}-${{ github.event_name == 'push' && github.ref_name || github.run_number }}
+  cancel-in-progress: ${{ github.ref_name != 'main' && github.event_name == 'push' }}
 
 permissions:
   contents: read
