--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -10,10 +10,6 @@ runs:
   using: 'composite'
 
   steps:
-    - name: ⚙️ Enable Corepack
-      shell: bash
-      run: sudo corepack enable
-
     - name: ⚙️ Calculate `CACHE_KEY`
       shell: bash
       run: |
@@ -36,15 +32,16 @@ runs:
           (steps.node-modules-restore.outputs.cache-hit == 'true') && 'true' || ''
         }}' >> "$GITHUB_ENV"
 
+    - name: ⚙️ Setup pnpm
+      uses: pnpm/action-setup@a3252b78c470c02df07e9d59298aecedc3ccdd6d # v3.0.0
+      with:
+        standalone: true
+
     - name: ⚙️ Setup Node.js
       uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
       with:
         node-version-file: .node-version
         cache: ${{ env.CACHE_HIT != 'true' && 'pnpm' || '' }}
-
-    - name: ⚙️ Enable Corepack
-      shell: bash
-      run: sudo corepack enable
 
     - name: 📥 Install dependencies
       if: env.CACHE_HIT != 'true'
