feat: support containerbase cdn

--- a/test/latest/Dockerfile
+++ b/test/latest/Dockerfile
@@ -6,6 +6,7 @@ FROM ubuntu:focal as base
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 
 ENV BASH_ENV=/usr/local/etc/env
@@ -114,6 +115,7 @@ ARG USER_NAME=gitpod
 ARG USER_ID=33333
 ARG PRIMARY_GROUP_ID=${USER_ID}
 ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 
 # Set env and shell
