--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,6 +141,9 @@ jobs:
 
       - name: test distro
         run: docker buildx bake
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
 
   distro:
     runs-on: ubuntu-latest
@@ -181,6 +184,9 @@ jobs:
 
       - name: test distro
         run: docker buildx bake test-distro
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
 
   lang:
     runs-on: ubuntu-latest
@@ -244,3 +250,4 @@ jobs:
         run: docker buildx bake test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
