--- a/test/erlang/Dockerfile.arm64
+++ b/test/erlang/Dockerfile.arm64
@@ -7,6 +7,7 @@ RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 
 ENV BASH_ENV=/usr/local/etc/env
