--- a/test/nix/Dockerfile
+++ b/test/nix/Dockerfile
@@ -6,6 +6,7 @@ FROM ubuntu:focal as base
 RUN touch /.dummy
 
 ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 ARG GITHUB_TOKEN
 
