--- a/test/node/Dockerfile
+++ b/test/node/Dockerfile
@@ -500,20 +500,20 @@ RUN set -ex; \
 #--------------------------------------
 FROM base
 
-# COPY --from=testa /.dummy /.dummy
+COPY --from=testa /.dummy /.dummy
 COPY --from=testb /.dummy /.dummy
-# COPY --from=testc /.dummy /.dummy
-# COPY --from=testd /.dummy /.dummy
-# COPY --from=teste /.dummy /.dummy
-# COPY --from=testf /.dummy /.dummy
-# COPY --from=testg /.dummy /.dummy
-# COPY --from=testh /.dummy /.dummy
-# COPY --from=testi /.dummy /.dummy
-# COPY --from=testj /.dummy /.dummy
-# COPY --from=testk /.dummy /.dummy
-# COPY --from=testl /.dummy /.dummy
-# COPY --from=testm /.dummy /.dummy
-# COPY --from=testn /.dummy /.dummy
-# COPY --from=testo /.dummy /.dummy
-# COPY --from=testp /.dummy /.dummy
-# COPY --from=testq /.dummy /.dummy
+COPY --from=testc /.dummy /.dummy
+COPY --from=testd /.dummy /.dummy
+COPY --from=teste /.dummy /.dummy
+COPY --from=testf /.dummy /.dummy
+COPY --from=testg /.dummy /.dummy
+COPY --from=testh /.dummy /.dummy
+COPY --from=testi /.dummy /.dummy
+COPY --from=testj /.dummy /.dummy
+COPY --from=testk /.dummy /.dummy
+COPY --from=testl /.dummy /.dummy
+COPY --from=testm /.dummy /.dummy
+COPY --from=testn /.dummy /.dummy
+COPY --from=testo /.dummy /.dummy
+COPY --from=testp /.dummy /.dummy
+COPY --from=testq /.dummy /.dummy
