test: disable latest test

--- a/test/php/Dockerfile
+++ b/test/php/Dockerfile
@@ -114,7 +114,8 @@ RUN install-tool php 8.3.7
 # renovate: datasource=github-releases packageName=composer/composer
 RUN install-tool composer 2.7.7
 
-RUN install-tool composer latest
+# TODO: add verison resolver
+#RUN install-tool composer latest
 
 USER 1000
 
@@ -152,7 +153,8 @@ USER 1000
 # renovate: datasource=github-releases packageName=containerbase/php-prebuild
 RUN install-tool php 8.3.7
 
-RUN install-tool composer latest
+# TODO: add verison resolver
+#RUN install-tool composer latest
 
 # renovate: datasource=github-releases packageName=composer/composer
 RUN install-tool composer 2.7.7
