feat(java): add maven version resolver

--- a/test/java/Dockerfile
+++ b/test/java/Dockerfile
@@ -205,6 +205,7 @@ FROM base as test-latest-version
 
 RUN install-tool java-jre
 RUN install-tool gradle
+RUN install-tool maven
 
 
 #--------------------------------------
